# Speculo

./: .clang-format  .gitignore  CMakeLists.txt  FileLock.hpp  Handle.h  LICENSE  README.md  format.h  format.hpp  main.cpp  main_generate_fundamental_types.cpp  main_speculo_gen.cpp  main_speculo_gen_server.cpp  main_test.cpp  test.generated.h  test.generated.hpp  test.h  test.meta.h  test.meta.hpp  test2.hpp  test_meta.h  vcpkg-configuration.json  vcpkg.json
cmake/: pf_meta.cmake  pf_metaConfig.cmake.in  speculo.cmake  speculoConfig.cmake.in
include/meta/: Attribute.hpp  ID.hpp  Info.hpp  enums.hpp  macros.hpp  meta.hpp  reflect.hpp  template_for.hpp
include/meta/details/: ID.hpp  RangeOf.hpp  ReflectInfoProviders.hpp  SpliceResultProviders.hpp  StaticInfo.hpp  StaticInfo_Wrappers.hpp  (+4 more)
include/speculo/: Attribute.hpp  ID.hpp  Info.hpp  Info.ixx  StringLiteral.ixx  attribute.ixx  details.ixx  enums.hpp  enums.ixx  fundamental_types.hpp  fundamental_types.ixx  fundamental_types.meta.hpp  macros.hpp  meta.hpp  meta_utils.ixx  reflect.hpp  speculo.ixx  template_for.hpp  template_for.ixx
meta/: Attribute.h  Attribute.hpp  Info.h  Info.hpp  common.h  enums.hpp  fundamental_types.meta.h  fundamental_types.meta.hpp  macros.h  meta.hpp  reflect.h  reflect.hpp  template_for.h  template_for.hpp
meta/details/: ID.h  ID.hpp  RangeOf.h  ReflectInfoProviders.hpp  SpliceResultProviders.hpp  StaticInfo.h  StaticInfo.hpp  StaticInfo_Wrappers.h  StaticInfo_Wrappers.hpp  StringLiteral.hpp  array.h  array.hpp  meta_helpers.h  template_for.h  template_for.hpp
meta_gen/: ASTParser.cpp  ASTParser.h  ASTParser.hpp  AstActions.cpp  AstActions.h  AstActions.hpp  AttributeParser.cpp  AttributeParser.h  AttributeParser.hpp  CodeGenWriter.cpp  CodeGenWriter.hpp  Config.h  Config.hpp  Contains.hpp  IdGenerator.h  IdGenerator.hpp  IncludeCollector.cpp  IncludeCollector.hpp  MetaInfoWriter.cpp  MetaInfoWriter.h  MetaInfoWriter.hpp  ParsedTypesCache.hpp  ParsingSettings.h  SafeQueue.hpp  SourceConfig.hpp  SpdlogDiagnosticConsumer.hpp  StringReplace.hpp  ThreadPool.h  ThreadPool.hpp  TypeIdGenerator.h  Visitor.hpp  clang_tooling_compilationdatabase_wrap.h  clang_tooling_compilationdatabase_wrap.hpp  clang_tooling_wrap.h  clang_tooling_wrap.hpp  clang_utils.h  clang_utils.hpp  info_structs.h  info_structs.hpp
meta_gen/codegen/: CodeGenerator.hpp  MetaSupportCodeGenerator.cpp  MetaSupportCodeGenerator.hpp  PluginManager.cpp  PluginManager.hpp
meta_gen/decl_parsers/: ASTDeclParser.cpp  ASTDeclParser.h  ASTDeclParser.hpp  ASTEnumDeclParser.cpp  ASTEnumDeclParser.h  ASTEnumParser.h  ASTEnumParser.hpp  ASTRecordParser.cpp  ASTRecordParser.h  ASTRecordParser.hpp  decl_parser_factory.cpp  decl_parser_factory.h  factory.cpp  factory.h  factory.hpp
meta_gen/src_templates/: GetConstantID_template.h  GetConstantID_template.hpp  GetTypeID_template.h  GetTypeID_template.hpp  MetaFilePrologueEpilogue.h  MetaFilePrologueEpilogue.hpp  StaticArgumentInfo_template.h  StaticArgumentInfo_template.hpp  StaticBaseInfo_template.h  StaticBaseInfo_template.hpp  StaticConstructorInfo_template.h  StaticConstructorInfo_template.hpp  StaticDestructorInfo_template.h  StaticDestructorInfo_template.hpp  StaticMemberFunctionInfo_template.h  StaticMemberFunctionInfo_template.hpp  StaticMemberVariableInfo_template.h  StaticMemberVariableInfo_template.hpp  StaticStaticFunctionInfo_template.h  StaticStaticFunctionInfo_template.hpp  StaticStaticVariableInfo_template.h  StaticStaticVariableInfo_template.hpp  StaticTypeInfo_template.h  StaticTypeInfo_template.hpp  StaticValueInfo_template.h  StaticValueInfo_template.hpp
meta_gen/wrap/: clang_ast_declcxx.hpp  clang_ast_qualtypenames.hpp  clang_basic_diagnostic.hpp  clang_frontend_compilerinstance.hpp  clang_frontend_frontendactions.hpp  clang_sema_sema.hpp  clang_tooling.hpp  clang_tooling_commonoptionsparser.hpp
scripts/: pf_meta_config_create.py  speculo_config_create.py
speculo_gen/: ASTParser.cpp  ASTParser.hpp  ASTParser.ixx  AstActions.cpp  AstActions.hpp  AttributeParser.cpp  AttributeParser.hpp  AttributeParser.ixx  DiagnosticConsumer.ixx  IdGenerator.hpp  IdGenerator.ixx  IncludeCollector.cpp  IncludeCollector.hpp  IncludeCollector.ixx  MetaInfoWriter.cpp  MetaInfoWriter.hpp  MetaInfoWriter.ixx  ParsedTypesCache.hpp  ProjectDatabase.cpp  ProjectDatabase.hpp  ProjectDatabase.ixx  SafeQueue.hpp  SafeQueue.ixx  SourceConfig.cpp  SourceConfig.hpp  SourceConfig.ixx  SpdlogDiagnosticConsumer.hpp  SpeculoGen.ixx  ThreadPool.hpp  ThreadPool.ixx  TypesCache.ixx  Visitor.hpp  algorithms.ixx  ast_actions.cpp  ast_actions.ixx  clang_utils.cpp  clang_utils.hpp  clang_utils.ixx  idToString.hpp  info_structs.hpp  (+6 more)
speculo_gen/algorithms/: StringReplace.hpp  contains.hpp  join.hpp
speculo_gen/codegen/: CodeGenerator.hpp  CodeGenerator.ixx  MetaSupportCodeGenerator.cpp  MetaSupportCodeGenerator.hpp  MetaSupportCodeGenerator.ixx  PluginManager.cpp  PluginManager.hpp  PluginManager.ixx
speculo_gen/decl_parsers/: ASTDeclParser.cpp  ASTDeclParser.hpp  ASTDeclParser.ixx  ASTEnumDeclParser.cpp  ASTEnumParser.cpp  ASTEnumParser.hpp  ASTEnumParser.ixx  ASTRecordParser.cpp  ASTRecordParser.hpp  ASTRecordParser.ixx  TypeInfoFactory.ixx  factory.cpp  factory.hpp  factory.ixx
speculo_gen/details/: boost_throw.cpp
speculo_gen/server/: Safe.hpp  json.hpp  messages.hpp
speculo_gen/src_templates/: GetConstantID.hpp  GetTypeID.hpp  MetaFilePrologueEpilogue.hpp  StaticArgumentInfo.hpp  StaticBaseInfo.hpp  StaticConstructorInfo.hpp  StaticDestructorInfo.hpp  StaticMemberFunctionInfo.hpp  StaticMemberVariableInfo.hpp  StaticStaticFunctionInfo.hpp  StaticStaticVariableInfo.hpp  StaticTypeInfo.hpp  StaticValueInfo.hpp
speculo_gen/wrap/: SilenceWarningsEnd.hpp  SilenceWarningsStart.hpp  clang_ast_recordlayout.hpp  clang_ast_recursiveASTVisitor.hpp  clang_lex_PreprocessorOptions.hpp  clang_tooling_compilationdatabase.hpp  clang_tooling_syntax_tokens.hpp
src/: test.h  test2.hpp  test_h.hpp  tmp.hpp
src/meta/: test.hpp  test2.hpp
test_src/: mod1.ixx  mod1_1.ixx  mod2.ixx  test.h  test2.hpp  test_h.hpp
(+13 files in other folders)
